--- a/lstm_transformer/transformer.ipynb
+++ b/lstm_transformer/transformer.ipynb
@@ -3,8 +3,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T00:53:27.967592Z",
-     "start_time": "2024-12-06T00:53:25.793597Z"
+     "end_time": "2024-12-09T06:07:43.331925Z",
+     "start_time": "2024-12-09T06:07:43.329536Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.insert(0, os.path.abspath(\"..\"))"
+   ],
+   "id": "965351ce161b7050",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T06:07:46.540293Z",
+     "start_time": "2024-12-09T06:07:44.368692Z"
     }
    },
    "cell_type": "code",
@@ -23,7 +40,7 @@
    ],
    "id": "78f501570b9ac4a0",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -31,8 +48,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-06T00:53:32.196603Z",
-     "start_time": "2024-12-06T00:53:32.192104Z"
+     "end_time": "2024-12-09T06:27:40.069340Z",
+     "start_time": "2024-12-09T06:27:40.064383Z"
     }
    },
    "source": [
@@ -64,13 +81,13 @@
     "        return x"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T00:53:34.015992Z",
-     "start_time": "2024-12-06T00:53:34.009184Z"
+     "end_time": "2024-12-09T06:27:50.538570Z",
+     "start_time": "2024-12-09T06:27:50.530718Z"
     }
    },
    "cell_type": "code",
@@ -139,29 +156,31 @@
    ],
    "id": "9725cf2268c56b57",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T01:28:27.274954Z",
-     "start_time": "2024-12-06T01:17:46.503988Z"
+     "end_time": "2024-12-09T06:51:06.455246Z",
+     "start_time": "2024-12-09T06:38:30.627659Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "train_feature_path = \"./features/feature_aug_train.npy\"\n",
-    "test_feature_path = \"./features/feature_aug_test.npy\"\n",
-    "train_label_path = \"./features/label_train.csv\"\n",
-    "test_label_path = \"./features/label_test.csv\"\n",
+    "train_feature = \"../features/feature_aug_train.npy\"\n",
+    "valid_feature = \"../features/feature_aug_validation.npy\"\n",
+    "test_feature = \"../features/feature_aug_test.npy\"\n",
+    "train_label = \"../features/label_train.csv\"\n",
+    "valid_label = \"../features/label_validation.csv\"\n",
+    "test_label = \"../features/label_test.csv\"\n",
     "\n",
     "batch_size = 256\n",
-    "valid_size = 0.2\n",
+    "# valid_size = 0.2\n",
     "\n",
-    "train_loader, valid_loader, test_loader, encoder = get_loader(train_feature_path, train_label_path, test_feature_path, test_label_path, batch_size, valid_size)\n",
+    "train_loader, valid_loader, test_loader, encoder = get_loader(train_feature, train_label, valid_feature, valid_label, test_feature, test_label, batch_size)\n",
     "\n",
     "input_size = train_loader.dataset[0][0].shape[0]\n",
-    "d_model = 256\n",
+    "d_model = 768\n",
     "nhead = 16\n",
     "num_layers = 4\n",
     "output_size = 4\n",
@@ -186,45 +205,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10/500, Train Loss: 0.6125, Train Accuracy: 0.7754, Val Loss: 0.5590, Valid Accuracy: 0.7950\n",
-      "Epoch 20/500, Train Loss: 0.4068, Train Accuracy: 0.8502, Val Loss: 0.3844, Valid Accuracy: 0.8577\n",
-      "Epoch 30/500, Train Loss: 0.3171, Train Accuracy: 0.8839, Val Loss: 0.3182, Valid Accuracy: 0.8813\n",
-      "Epoch 40/500, Train Loss: 0.2617, Train Accuracy: 0.9030, Val Loss: 0.2561, Valid Accuracy: 0.9057\n",
-      "Epoch 50/500, Train Loss: 0.2223, Train Accuracy: 0.9193, Val Loss: 0.2204, Valid Accuracy: 0.9213\n",
-      "Epoch 60/500, Train Loss: 0.1826, Train Accuracy: 0.9322, Val Loss: 0.1968, Valid Accuracy: 0.9305\n",
-      "Epoch 70/500, Train Loss: 0.1577, Train Accuracy: 0.9426, Val Loss: 0.1904, Valid Accuracy: 0.9349\n",
-      "Epoch 80/500, Train Loss: 0.1348, Train Accuracy: 0.9496, Val Loss: 0.1606, Valid Accuracy: 0.9436\n",
-      "Epoch 90/500, Train Loss: 0.1143, Train Accuracy: 0.9581, Val Loss: 0.1488, Valid Accuracy: 0.9488\n",
-      "Epoch 100/500, Train Loss: 0.0998, Train Accuracy: 0.9635, Val Loss: 0.1385, Valid Accuracy: 0.9524\n",
-      "Epoch 110/500, Train Loss: 0.0855, Train Accuracy: 0.9681, Val Loss: 0.1322, Valid Accuracy: 0.9584\n",
-      "Epoch 120/500, Train Loss: 0.0752, Train Accuracy: 0.9726, Val Loss: 0.1241, Valid Accuracy: 0.9599\n",
-      "Epoch 130/500, Train Loss: 0.0637, Train Accuracy: 0.9758, Val Loss: 0.1221, Valid Accuracy: 0.9615\n",
-      "Epoch 140/500, Train Loss: 0.0575, Train Accuracy: 0.9783, Val Loss: 0.1195, Valid Accuracy: 0.9634\n",
-      "Epoch 150/500, Train Loss: 0.0518, Train Accuracy: 0.9814, Val Loss: 0.1174, Valid Accuracy: 0.9645\n",
-      "Epoch 160/500, Train Loss: 0.0437, Train Accuracy: 0.9844, Val Loss: 0.1134, Valid Accuracy: 0.9663\n",
-      "Epoch 170/500, Train Loss: 0.0411, Train Accuracy: 0.9851, Val Loss: 0.1145, Valid Accuracy: 0.9674\n",
-      "Epoch 180/500, Train Loss: 0.0346, Train Accuracy: 0.9881, Val Loss: 0.1136, Valid Accuracy: 0.9684\n",
-      "Epoch 190/500, Train Loss: 0.0305, Train Accuracy: 0.9885, Val Loss: 0.1180, Valid Accuracy: 0.9685\n",
-      "Epoch 200/500, Train Loss: 0.0283, Train Accuracy: 0.9901, Val Loss: 0.1214, Valid Accuracy: 0.9689\n",
+      "Epoch 10/500, Train Loss: 0.5271, Train Accuracy: 0.8051, Val Loss: 0.4801, Valid Accuracy: 0.8270\n",
+      "Epoch 20/500, Train Loss: 0.3657, Train Accuracy: 0.8642, Val Loss: 0.3632, Valid Accuracy: 0.8688\n",
+      "Epoch 30/500, Train Loss: 0.2748, Train Accuracy: 0.8987, Val Loss: 0.2921, Valid Accuracy: 0.8971\n",
+      "Epoch 40/500, Train Loss: 0.2090, Train Accuracy: 0.9234, Val Loss: 0.2457, Valid Accuracy: 0.9114\n",
+      "Epoch 50/500, Train Loss: 0.1485, Train Accuracy: 0.9449, Val Loss: 0.2029, Valid Accuracy: 0.9280\n",
+      "Epoch 60/500, Train Loss: 0.1080, Train Accuracy: 0.9599, Val Loss: 0.1604, Valid Accuracy: 0.9460\n",
+      "Epoch 70/500, Train Loss: 0.0779, Train Accuracy: 0.9708, Val Loss: 0.1369, Valid Accuracy: 0.9537\n",
+      "Epoch 80/500, Train Loss: 0.0587, Train Accuracy: 0.9785, Val Loss: 0.1255, Valid Accuracy: 0.9581\n",
+      "Epoch 90/500, Train Loss: 0.0458, Train Accuracy: 0.9833, Val Loss: 0.1239, Valid Accuracy: 0.9631\n",
+      "Epoch 100/500, Train Loss: 0.0341, Train Accuracy: 0.9875, Val Loss: 0.1213, Valid Accuracy: 0.9667\n",
+      "Epoch 110/500, Train Loss: 0.0258, Train Accuracy: 0.9905, Val Loss: 0.1230, Valid Accuracy: 0.9675\n",
+      "Epoch 120/500, Train Loss: 0.0200, Train Accuracy: 0.9930, Val Loss: 0.1185, Valid Accuracy: 0.9714\n",
+      "Epoch 130/500, Train Loss: 0.0158, Train Accuracy: 0.9946, Val Loss: 0.1310, Valid Accuracy: 0.9696\n",
       "Early stopping triggered. \n",
-      "Test Loss: 1.1345, Test Accuracy: 0.8189\n"
+      "Test Loss: 1.4311, Test Accuracy: 0.8240\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T01:15:37.421957Z",
-     "start_time": "2024-12-06T01:15:37.410417Z"
+     "end_time": "2024-12-09T06:51:12.013405Z",
+     "start_time": "2024-12-09T06:51:12.002928Z"
     }
    },
    "cell_type": "code",
-   "source": "pd.DataFrame(pred_labels, columns=['Stance']).to_csv('./preds_trans.csv', index=False)",
+   "source": "pd.DataFrame(pred_labels, columns=['Stance']).to_csv('../output/preds_trans.csv', index=False)",
    "id": "b5beeeedffe86fac",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 14
   }
  ],
  "metadata": {
