--- a/lstm_transformer/transformer2.ipynb
+++ b/lstm_transformer/transformer2.ipynb
@@ -1,13 +1,30 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-09T06:52:58.529921Z",
+     "start_time": "2024-12-09T06:52:58.525167Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.insert(0, os.path.abspath(\"..\"))"
+   ],
+   "id": "209b6729ecb9a361",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-06T22:28:38.176678Z",
-     "start_time": "2024-12-06T22:28:38.172815Z"
+     "end_time": "2024-12-09T06:53:25.296765Z",
+     "start_time": "2024-12-09T06:53:23.223178Z"
     }
    },
    "source": [
@@ -26,48 +43,42 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ],
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T22:28:39.454284Z",
-     "start_time": "2024-12-06T22:28:39.450694Z"
+     "end_time": "2024-12-09T06:53:26.615474Z",
+     "start_time": "2024-12-09T06:53:26.611498Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class LearnedPositionalEncoding(nn.Module):\n",
-    "    \"\"\"\n",
-    "    Implements learned positional encoding using nn.Embedding.\n",
-    "    \"\"\"\n",
     "    def __init__(self, d_model, max_len):\n",
     "        super(LearnedPositionalEncoding, self).__init__()\n",
     "        self.positional_encoding = nn.Embedding(max_len, d_model)\n",
     "\n",
     "    def forward(self, x):\n",
     "        seq_len = x.size(1)\n",
-    "        positions = torch.arange(0, seq_len, dtype=torch.long, device=x.device).unsqueeze(0)  # [1, seq_len]\n",
+    "        positions = torch.arange(0, seq_len, dtype=torch.long, device=x.device).unsqueeze(0)\n",
     "        \n",
     "        return x + self.positional_encoding(positions)\n"
    ],
    "id": "c8269f76f3d77628",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T22:28:40.662549Z",
-     "start_time": "2024-12-06T22:28:40.659094Z"
+     "end_time": "2024-12-09T06:53:28.224919Z",
+     "start_time": "2024-12-09T06:53:28.221272Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class TransformerEncoder(nn.Module):\n",
-    "    \"\"\"\n",
-    "    Transformer Encoder with LayerDrop.\n",
-    "    \"\"\"\n",
     "    def __init__(self, d_model, encoder_layer, num_layers, layerdrop=0.1):\n",
     "        super(TransformerEncoder, self).__init__()\n",
     "        self.layers = nn.ModuleList([encoder_layer for _ in range(num_layers)])\n",
@@ -83,13 +94,13 @@
    ],
    "id": "4a88f997b148aa31",
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T22:58:15.662329Z",
-     "start_time": "2024-12-06T22:58:15.656933Z"
+     "end_time": "2024-12-09T06:53:30.131168Z",
+     "start_time": "2024-12-09T06:53:30.126424Z"
     }
    },
    "cell_type": "code",
@@ -124,13 +135,13 @@
    ],
    "id": "3612f83e56a1bfbf",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T22:58:17.374217Z",
-     "start_time": "2024-12-06T22:58:17.370418Z"
+     "end_time": "2024-12-09T06:53:32.369634Z",
+     "start_time": "2024-12-09T06:53:32.366235Z"
     }
    },
    "cell_type": "code",
@@ -150,13 +161,13 @@
    ],
    "id": "340e3296bea6f947",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T22:58:18.698329Z",
-     "start_time": "2024-12-06T22:58:18.688481Z"
+     "end_time": "2024-12-09T06:53:33.979140Z",
+     "start_time": "2024-12-09T06:53:33.969287Z"
     }
    },
    "cell_type": "code",
@@ -258,13 +269,13 @@
    ],
    "id": "fe8e83b69c6e1a45",
    "outputs": [],
-   "execution_count": 69
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T22:58:22.935469Z",
-     "start_time": "2024-12-06T22:58:22.930777Z"
+     "end_time": "2024-12-09T06:53:38.719427Z",
+     "start_time": "2024-12-09T06:53:38.714950Z"
     }
    },
    "cell_type": "code",
@@ -306,29 +317,31 @@
    ],
    "id": "97b198273e0e44a4",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T23:07:10.447986Z",
-     "start_time": "2024-12-06T22:58:24.737884Z"
+     "end_time": "2024-12-09T09:13:59.757543Z",
+     "start_time": "2024-12-09T09:06:03.789962Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "train_feature_path = \"./features/feature_aug_train.npy\"\n",
-    "test_feature_path = \"./features/feature_aug_test.npy\"\n",
-    "train_label_path = \"./features/label_train.csv\"\n",
-    "test_label_path = \"./features/label_test.csv\"\n",
+    "train_feature = \"../features/feature_aug_train.npy\"\n",
+    "valid_feature = \"../features/feature_aug_validation.npy\"\n",
+    "test_feature = \"../features/feature_aug_test.npy\"\n",
+    "train_label = \"../features/label_train.csv\"\n",
+    "valid_label = \"../features/label_validation.csv\"\n",
+    "test_label = \"../features/label_test.csv\"\n",
     "\n",
     "batch_size = 256\n",
-    "valid_size = 0.2\n",
+    "# valid_size = 0.2\n",
     "\n",
-    "train_loader, valid_loader, test_loader, encoder = get_loader(train_feature_path, train_label_path, test_feature_path, test_label_path, batch_size, valid_size)\n",
+    "train_loader, valid_loader, test_loader, encoder = get_loader(train_feature, train_label, valid_feature, valid_label, test_feature, test_label, batch_size)\n",
     "\n",
     "input_size = train_loader.dataset[0][0].shape[0]\n",
-    "d_model = 256\n",
+    "d_model = 512\n",
     "nhead = 8\n",
     "num_layers = 4\n",
     "output_size = 4\n",
@@ -340,11 +353,17 @@
     "\n",
     "epochs = 500\n",
     "\n",
-    "class_weights = torch.tensor([13.35, 36.46, 5.69, 1.38]).to(device)\n",
-    "criterion = FocalLoss(alpha=1.0, gamma=2.0, smoothing=0.2, weight=class_weights)\n",
+    "def class_weights(label_path):\n",
+    "    labels = pd.read_csv(label_path)[\"Stance\"]\n",
+    "    _, counts = np.unique(labels, return_counts = True)\n",
+    "    return labels.shape[0] / counts\n",
+    "\n",
+    "weights = torch.tensor(class_weights(train_label), dtype = torch.float32).to(device)\n",
+    "# class_weights = torch.tensor([13, 59, 10, 2]).to(device)\n",
+    "criterion = FocalLoss(alpha=1.0, gamma=2.0, smoothing=0.2, weight=weights)\n",
     "# criterion = nn.CrossEntropyLoss(weight=class_weights, label_smoothing=0.2)\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-5, weight_decay=1e-4)\n",
-    "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=epochs)\n",
+    "scheduler = torch.optim.lr_scheduler.CosineAnnealingWarmRestarts(optimizer, T_0=10, T_mult=2)\n",
     "\n",
     "train_model(model, train_loader, valid_loader, optimizer, criterion, num_epochs=500, device=device, scheduler=scheduler, stopper_args={'threshold': 20, 'epsilon': 1e-4}, mixup_alpha=0.2)\n",
     "\n",
@@ -357,43 +376,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10/500, Train Loss: 1.9650, Train Accuracy: 0.5542, Val Loss: 1.5038, Valid Accuracy: 0.7484\n",
-      "Epoch 20/500, Train Loss: 1.6724, Train Accuracy: 0.6465, Val Loss: 1.1281, Valid Accuracy: 0.8427\n",
-      "Epoch 30/500, Train Loss: 1.5067, Train Accuracy: 0.6690, Val Loss: 0.9702, Valid Accuracy: 0.8795\n",
-      "Epoch 40/500, Train Loss: 1.2910, Train Accuracy: 0.6965, Val Loss: 0.8575, Valid Accuracy: 0.9167\n",
-      "Epoch 50/500, Train Loss: 1.2902, Train Accuracy: 0.6989, Val Loss: 0.7874, Valid Accuracy: 0.9220\n",
-      "Epoch 60/500, Train Loss: 1.1830, Train Accuracy: 0.7407, Val Loss: 0.7606, Valid Accuracy: 0.9263\n",
-      "Epoch 70/500, Train Loss: 1.0932, Train Accuracy: 0.7446, Val Loss: 0.6903, Valid Accuracy: 0.9460\n",
-      "Epoch 80/500, Train Loss: 1.1985, Train Accuracy: 0.7502, Val Loss: 0.6743, Valid Accuracy: 0.9420\n",
-      "Epoch 90/500, Train Loss: 1.0202, Train Accuracy: 0.7526, Val Loss: 0.6123, Valid Accuracy: 0.9722\n",
-      "Epoch 100/500, Train Loss: 1.0611, Train Accuracy: 0.7532, Val Loss: 0.6186, Valid Accuracy: 0.9566\n",
-      "Epoch 110/500, Train Loss: 0.9990, Train Accuracy: 0.7347, Val Loss: 0.6199, Valid Accuracy: 0.9682\n",
-      "Epoch 120/500, Train Loss: 1.0084, Train Accuracy: 0.7716, Val Loss: 0.6014, Valid Accuracy: 0.9624\n",
-      "Epoch 130/500, Train Loss: 0.9717, Train Accuracy: 0.7650, Val Loss: 0.5945, Valid Accuracy: 0.9646\n",
-      "Epoch 140/500, Train Loss: 0.8475, Train Accuracy: 0.7748, Val Loss: 0.5704, Valid Accuracy: 0.9746\n",
-      "Epoch 150/500, Train Loss: 1.0251, Train Accuracy: 0.7901, Val Loss: 0.5722, Valid Accuracy: 0.9807\n",
-      "Epoch 160/500, Train Loss: 0.9411, Train Accuracy: 0.7489, Val Loss: 0.5836, Valid Accuracy: 0.9746\n",
-      "Epoch 170/500, Train Loss: 0.9769, Train Accuracy: 0.7571, Val Loss: 0.5589, Valid Accuracy: 0.9787\n",
-      "Epoch 180/500, Train Loss: 0.9296, Train Accuracy: 0.7229, Val Loss: 0.5615, Valid Accuracy: 0.9824\n",
-      "Epoch 190/500, Train Loss: 0.9628, Train Accuracy: 0.7777, Val Loss: 0.5527, Valid Accuracy: 0.9820\n",
+      "Epoch 10/500, Train Loss: 2.4675, Train Accuracy: 0.4455, Val Loss: 2.0202, Valid Accuracy: 0.6521\n",
+      "Epoch 20/500, Train Loss: 1.9580, Train Accuracy: 0.6039, Val Loss: 1.4953, Valid Accuracy: 0.7031\n",
+      "Epoch 30/500, Train Loss: 1.8695, Train Accuracy: 0.6643, Val Loss: 1.2537, Valid Accuracy: 0.8188\n",
+      "Epoch 40/500, Train Loss: 1.5716, Train Accuracy: 0.6626, Val Loss: 1.0378, Valid Accuracy: 0.8802\n",
+      "Epoch 50/500, Train Loss: 1.4222, Train Accuracy: 0.7051, Val Loss: 0.8903, Valid Accuracy: 0.9112\n",
+      "Epoch 60/500, Train Loss: 1.3285, Train Accuracy: 0.7233, Val Loss: 0.8663, Valid Accuracy: 0.9095\n",
+      "Epoch 70/500, Train Loss: 1.3084, Train Accuracy: 0.7091, Val Loss: 0.8302, Valid Accuracy: 0.9220\n",
+      "Epoch 80/500, Train Loss: 1.2591, Train Accuracy: 0.7073, Val Loss: 0.7756, Valid Accuracy: 0.9394\n",
+      "Epoch 90/500, Train Loss: 1.2207, Train Accuracy: 0.7069, Val Loss: 0.7315, Valid Accuracy: 0.9420\n",
+      "Epoch 100/500, Train Loss: 1.2276, Train Accuracy: 0.7468, Val Loss: 0.6652, Valid Accuracy: 0.9707\n",
+      "Epoch 110/500, Train Loss: 1.1378, Train Accuracy: 0.7569, Val Loss: 0.6676, Valid Accuracy: 0.9607\n",
+      "Epoch 120/500, Train Loss: 1.0303, Train Accuracy: 0.7707, Val Loss: 0.6739, Valid Accuracy: 0.9627\n",
+      "Epoch 130/500, Train Loss: 1.0607, Train Accuracy: 0.7339, Val Loss: 0.6440, Valid Accuracy: 0.9668\n",
+      "Epoch 140/500, Train Loss: 1.0647, Train Accuracy: 0.7727, Val Loss: 0.6356, Valid Accuracy: 0.9699\n",
       "Early stopping triggered. \n"
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T23:07:17.413564Z",
-     "start_time": "2024-12-06T23:07:16.267030Z"
+     "end_time": "2024-12-09T09:14:05.366974Z",
+     "start_time": "2024-12-09T09:14:03.937025Z"
     }
    },
    "cell_type": "code",
    "source": [
     "test_loss, test_accuracy, _, pred = test(model, test_loader, criterion, device, verbose=1)\n",
     "pred_labels = encoder.inverse_transform(pred)\n",
-    "pd.DataFrame(pred_labels, columns=['Stance']).to_csv('./preds_trans.csv', index=False)"
+    "pd.DataFrame(pred_labels, columns=['Stance']).to_csv('../output/preds2_trans.csv', index=False)"
    ],
    "id": "9cb52d383a0b469b",
    "outputs": [
@@ -401,11 +415,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 4.0587, Test Accuracy: 0.7915\n"
+      "Test Loss: 4.8314, Test Accuracy: 0.7870\n"
      ]
     }
    ],
-   "execution_count": 72
+   "execution_count": 31
   }
  ],
  "metadata": {
